# py-compile-opt

./: .gitignore  CMakeLists.txt  library.h
include/: CMakeLists.txt
include/mlir/Dialect/: CMakeLists.txt
include/mlir/Dialect/Pyc/: InitAllTranslations.hh
include/mlir/Dialect/Pyc/IR/: CMakeLists.txt  Pyc.hh  PycDialect.td  PycOps.td  PycOpsEnums.td  PycOpsInterfaces.td
include/mlir/Dialect/Pyc/Transforms/: CMakeLists.txt  Passes.hh  Passes.td
lib/Dialect/: CMakeLists.txt
lib/Dialect/Pyc/IR/: CMakeLists.txt  PycDialect.cc  PycOps.cc
lib/Dialect/Pyc/Transforms/: CMakeLists.txt  DecodeByteCode.cc  DecodeSourceLocation.cc  ElaborateReferences.cc
tests/: CMakeLists.txt  lit.cmake.cfg.py  lit.cmake.site.cfg.py.in
tests/Dialect/Pyc/Transforms/: decode-byte-code.mlir  decode-source-location.mlir
tools/: CMakeLists.txt
tools/pyc-opt/: CMakeLists.txt  pyc-opt.cc
tools/pyc-parser/: CMakeLists.txt  pyc-parser.cc
tools/pyc-translate/: CMakeLists.txt  pyc-translate.cc
utils/cpython-pyc/: cpython-pyc
utils/pyc-opt-gen/: generate-td.py  pycore_opcode_metadata.h
utils/pyc-parser-gen/: pyc-parser-gen.py
